[gd_scene load_steps=6 format=2]

[ext_resource path="res://DialogueOptions.gd" type="Script" id=1]
[ext_resource path="res://Assets/Fonts/PIXELADE.TTF" type="DynamicFontData" id=2]
[ext_resource path="res://Scenes/UI/Option.gd" type="Script" id=4]
[ext_resource path="res://Assets/Textures/UI/Selection.tscn" type="PackedScene" id=5]

[sub_resource type="DynamicFont" id=1]
size = 26
font_data = ExtResource( 2 )

[node name="DialogueOptions" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -6.0
margin_top = -6.0
margin_right = -6.0
margin_bottom = -6.0
script = ExtResource( 1 )

[node name="Option1" type="Control" parent="."]
margin_top = -19.0
margin_right = 40.0
margin_bottom = 21.0
script = ExtResource( 4 )

[node name="Button" type="TextureButton" parent="Option1"]
margin_left = 365.0
margin_top = 145.0
margin_right = 6261.0
margin_bottom = 1777.0
rect_min_size = Vector2( 5, 5 )
rect_scale = Vector2( 0.048, 0.019 )

[node name="Sprite" parent="Option1" instance=ExtResource( 5 )]
visible = false
position = Vector2( 507, 157 )
scale = Vector2( 0.0676, 0.0187847 )

[node name="Label" type="Label" parent="Option1"]
margin_left = 371.0
margin_top = 149.0
margin_right = 827.0
margin_bottom = 176.0
rect_scale = Vector2( 0.75, 0.75 )
custom_fonts/font = SubResource( 1 )
text = "Hello. World. How are you? BAH BLAWE"

[node name="Option2" type="Control" parent="."]
margin_top = 6.0
margin_right = 40.0
margin_bottom = 46.0
script = ExtResource( 4 )
index = 1

[node name="Button" type="TextureButton" parent="Option2"]
margin_left = 365.0
margin_top = 149.0
margin_right = 6261.0
margin_bottom = 1781.0
rect_min_size = Vector2( 5, 5 )
rect_scale = Vector2( 0.048, 0.019 )

[node name="Sprite" parent="Option2" instance=ExtResource( 5 )]
visible = false
position = Vector2( 507, 162 )
scale = Vector2( 0.068, 0.019 )

[node name="Label" type="Label" parent="Option2"]
margin_left = 371.0
margin_top = 153.0
margin_right = 827.0
margin_bottom = 180.0
rect_scale = Vector2( 0.75, 0.75 )
custom_fonts/font = SubResource( 1 )
text = "Hello. World. How are you?"

[node name="Option3" type="Control" parent="."]
margin_top = 31.0
margin_right = 40.0
margin_bottom = 71.0
script = ExtResource( 4 )
index = 2

[node name="Button" type="TextureButton" parent="Option3"]
margin_left = 365.0
margin_top = 158.0
margin_right = 6094.0
margin_bottom = 1790.0
rect_min_size = Vector2( 5, 5 )
rect_scale = Vector2( 0.048, 0.019 )

[node name="Sprite" parent="Option3" instance=ExtResource( 5 )]
visible = false
position = Vector2( 507, 169 )
scale = Vector2( 0.068, 0.019 )

[node name="Label" type="Label" parent="Option3"]
margin_left = 371.0
margin_top = 162.0
margin_right = 827.0
margin_bottom = 189.0
rect_scale = Vector2( 0.75, 0.75 )
custom_fonts/font = SubResource( 1 )
text = "Hello. World. How are you?"

[connection signal="mouse_entered" from="Option1/Button" to="Option1" method="_on_Button_mouse_entered"]
[connection signal="mouse_exited" from="Option1/Button" to="Option1" method="_on_Button_mouse_exited"]
[connection signal="pressed" from="Option1/Button" to="Option1" method="_on_Button_pressed"]
[connection signal="mouse_entered" from="Option2/Button" to="Option2" method="_on_Button_mouse_entered"]
[connection signal="mouse_exited" from="Option2/Button" to="Option2" method="_on_Button_mouse_exited"]
[connection signal="pressed" from="Option2/Button" to="Option2" method="_on_Button_pressed"]
[connection signal="mouse_entered" from="Option3/Button" to="Option3" method="_on_Button_mouse_entered"]
[connection signal="mouse_exited" from="Option3/Button" to="Option3" method="_on_Button_mouse_exited"]
[connection signal="pressed" from="Option3/Button" to="Option3" method="_on_Button_pressed"]
